removed href styling on comment submit button in articles. Fixed alignment on hero article icon

--- a/gem/static/css/_style.article.scss
+++ b/gem/static/css/_style.article.scss
@@ -50,6 +50,13 @@
   .section-image {
     display: none;
   }
+
+  .post-comment a {
+      color: #FFF;
+      text-decoration: none;
+  }
+
+
 }
 
 .article-tags:first-child {
